peac_dev/force-app/main/default/objects/Offers_Pricing_Authority__c/Offers_Pricing_Authority__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Offers/Pricing Authority</label>
</CustomObject>