peac_dev/force-app/main/default/objects/Offers_Pricing_Authority__c/fields/Minimum_Yield_60_months__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Yield_60_months__c</fullName>
    <label>Minimum Yield (60+ months)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>