peac_dev/force-app/main/default/objects/Offers_Pricing_Authority__c/fields/RBP_Rate_Concession__c.field-meta.xml
<CustomField>
    <fullName>RBP_Rate_Concession__c</fullName>
    <label>RBP Rate Concession</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>