peac_dev/force-app/main/default/objects/Offers_Pricing_Authority__c/listViews/All_Custom.listView-meta.xml
<ListView>
    <fullName>All_Custom</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Minimum_Yield_12_35_months__c</columns>
    <columns>Minimum_Yield_36_59_months__c</columns>
    <columns>Minimum_Yield_60_months__c</columns>
    <columns>RBP_Rate_Concession__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Custom</label>
</ListView>